2016-07-30  Araki Ken  <arakiken@users.sf.net>

	* console/x_display.c: modifyOtherKeys is enabled by default.

2016-07-29  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c, main_loop.c, gdk-pixbuf.c, x_color.h, x_color_cache.c,
	  x_color_manager.c, x_display.h, x_draw_str.c, x_font.h, x_font_cache.c,
	  x_font_cache.h, x_font_config.c, x_font_manager.c, x_font_manager.h,
	  x_im_candidate_screen.c, x_im_status_screen.c, x_imagelib.h, x_layout.c,
	  x_main_config.c, x_picture.h, x_screen.c, x_window.h, xlib/x_imagelib.c:
	  USE_WIN32GUI, USE_QUARTZ, USE_FRAMEBUFFER and USE_CONSOLE are refactored.

	* console/x.h, fb/x.h, quartz/x.h, win32/x.h:
	  Platform dependent options (X_COLOR_HAS_RGB, SUPPORT_TRUE_TRANSPARENT_BG,
	  TYPE_XCORE_SCALABLE, MANAGE_WINDOWS_BY_MYSELF,
	  INLINE_PICTURE_MOVABLE_BETWEEN_DISPLAYS, SUPPORT_POINT_SIZE_FONT) are added.

	* xlib/x.h: Added.

	* x.h: USE_XLIB is defined on xlib.

2016-07-26  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, PROTOCOL: Updated.

	* main_loop.c: If no ml_term_t exists, mlterm-con-server exits from the main loop.

	* main/main-con.c:
	  - Moved from tool/mlclient/.
	  - mlterm-con-server is started if unix domain socket of ~/.mlterm/socket-con
	    doesn't work.

	* main/Makefile.in: mlterm-con-server is installed to $(libexec)/mlterm, and
	  mlterm-con is to $(bindir)/mlterm.

	* im_fcitx.c, im_ibus.c, im_m17nlib.c, im_uim.c:
	  USE_FRAMEBUFFER -> USE_FRAMEBUFFER || USE_CONSOLE

	* x_screen.c: "console_encoding" and "console_sixel_colors" are added to OSC 5379.

	* x_main_config.c: --csz/cell_size option is added.

	* x_draw_str.c, x_picture.h: If INLINE_PICTURE_MOVABLE_BETWEEN_DISPLAYS macro
	  is defined, cur_pic->disp == window->disp is not checked.

	* daemon.c:
	  - client_connected() for mlterm-con-server is moved from console/x_display.c
	  - STD{IN|OUT|ERR}_FILENO are closed in daemon_init().

	* console/x_window.c:
	  - x_window_fill_with() do nothing if height or width is less than