@@ -206,21 +206,6 @@ version 20160508
   o Source and destination file names of "scp" command are convered to system
     locale encoding and terminal encoding respectively.
 
-* Note about font configuration
-  If you specify like "12," as <value>, previous setting of 12 pixel font is cleared.
-  If you specify "" as <value>, previous setting of default font is cleared.
-  Values like "12," or "" aren't written to ~/.mlterm/(vt)(aa)font files.
-
-  e.g.)
-  $ printf "\x1b]5384;font:ISO8859_1=12,a12\x07"
-    => Use "a12" for 12 pixel font.
-  $ printf "\x1b]5384;font:ISO8859_1=-*--%d-*-iso8859-1\x07"
-    => Use "-*--%d-*-iso8859-1" for default font.
-  $ printf "\x1b]5384;font:ISO8859_1=12,\x07"
-    => 12 pixel font setting is cleared.
-  $ printf "\x1b]5384;font:ISO8859_1=\x07" or "\x1b]5384;font:ISO8859_1=;\x07"
-    => Default font setting is cleared.
-
 * Note about color configuration
   If you specify "" as <value>, previous setting of <key> color is cleared.
 
