@@ -1,6 +1,6 @@
 ver 3.7.2
-* Add mlterm-con which is a console version of mlterm and which works on various
-  terminal emulators.
+* Add mlterm-con which is a console version of mlterm (like GNU Screen) and which
+  works on various terminal emulators.
 * Add "console_encoding" / --ckm option which specifies a character encoding of
   the console where mlterm-con works.
 * Add "default_cell_size" / --csz option for mlterm-con.
